# informatics_laboratories_3

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
appendix/: report.docx
authorization/: __main__.py  app.py
authorization/templates/: account.html  login.html
database/: init.sql
